2007-04-26  Per Bothner  <per@bothner.com>

	* SourceMessages.java (error): New overload, takes Throwable.

2007-02-23  Per Bothner  <per@bothner.com>

	* SourceMessages.java (swapSourceLocator): New method.

2007-01-14  Per Bothner  <per@bothner.com>

	* Lexer.java (tokenBufferAppend): Fix off-by-one error.

	* FilePath.java (getParent): Handle null parent.

2007-01-11  Per Bothner  <per@bothner.com>

	* URIPath.java (exists): New method.

2007-01-09  Per Bothner  <per@bothner.com>

	* URIPath.java (valueOf): Remove unused factory method.

	* Path.java (userDirPath): Define as ".".
	(getAbsolute): Special handling of userDirPath.
	* FilePath.java (toURL, toURI): Likewise.

	* FilePath.java (toURIString): Remove in use:URI case.
	Make in-static in non-use:URI case.

	* FilePath.java (static toURL(File)): Inline in ...
	(toURL()): Also, if not absolute, make it so.

	* Path.java (getDirectory, getParent, getLast, getExtension):
	New component extraction methods.
	* FilePath.java (getLast, getParent): New methods.

	* URIPath.java (getPath): Use URL.getFile rather han URL.getPath
	since latter requires JDK 1.3.

2007-01-06  Per Bothner  <per@bothner.com>

	* Path.java (isDirectory): New method.
	* FilePath.java (isDirectory): New method.

2007-01-05  Per Bothner  <per@bothner.com>

	* FilePath.java (toURIString): Fix non-use:java.net.URI Preprocess case.
	* URIPath.java (<init>): Make protected in non-use:URI case, since
	it is needed for URLPath.	
	(coerceToFilePathOrNull): Don't use URIStringPath in non-use:URI case.
	(resolve, getUserInfo, getFragment): More fixes.

2007-01-04  Per Bothner  <per@bothner.com>

	* URI_utils.java: Remove class.  Replaced by Path and its subclasses.
	* Makefile.am: Update accordingly.

	* FilePath.java (path): New field.
	(<init>): New and updated constructor.
	(valueOf): Update to set path.
	(isDirectory): New method.
	(toString): Return path.
	(resolve): Check if isDirectory.
